@@ -2,6 +2,7 @@
 
 * Fix today button on date dialog saving PDF
 * Fix resolution when processing non-standard sized images with unpaper
+* Speed up downsample option by using imagemagick sample instead of resize
 
 
 1.2.4 (26.03.2014):
